[package]
name = "distance"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bio = "0.37"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
libmath = "0.2"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1.6"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
