[package]
name = "io"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bio = "0.37"
seq_io = "0.3.1"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = {version= "0.2", features=["serde-serialize"]}
console_error_panic_hook = "0.1.6"
serde = { version = "1", features = ["derive"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
