[package]
name = "wagner_fischer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
bio = "0.37"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
